--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
       }
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "tether": "^1.4.0"
+  },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
     "babel-cli": "^6.14.0",
